Fix spacing issue with form in user info section

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -152,7 +152,6 @@ button {
   width: 400px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   align-items: center;
 };
 
@@ -233,6 +232,10 @@ button {
 
 .small-txt {
   font-size: 16px;
+}
+
+.form {
+  margin-top: 20px;
 }
 
 .hidden {
